; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_client.c_write_client.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_client.c_write_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_client = common dso_local global i32 0, align 4
@do_everything = common dso_local global i64 0, align 8
@client = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @write_client(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32, i32* @do_client, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %24

6:                                                ; preds = %1
  %7 = load i64, i64* @do_everything, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %14

9:                                                ; preds = %6
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @need_stub_files(i32* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %9
  br label %24

14:                                               ; preds = %9, %6
  %15 = call i32 (...) @init_client()
  %16 = load i32, i32* @client, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %14
  br label %24

19:                                               ; preds = %14
  %20 = load i32*, i32** %2, align 8
  %21 = call i32 @write_client_routines(i32* %20)
  %22 = load i32, i32* @client, align 4
  %23 = call i32 @fclose(i32 %22)
  br label %24

24:                                               ; preds = %19, %18, %13, %5
  ret void
}

declare dso_local i32 @need_stub_files(i32*) #1

declare dso_local i32 @init_client(...) #1

declare dso_local i32 @write_client_routines(i32*) #1

declare dso_local i32 @fclose(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
